--- a/public_html/mudlist.html
+++ b/public_html/mudlist.html
@@ -24,7 +24,7 @@ td { white-space:nowrap; }
 <th align="left" >Name</th>
 </tr>
 <tr bgcolor="#000000">
-<td align="center">00:20:27</td>
+<td align="center">00:00:58</td>
 <td align="left">Dread Quixadhal is the Dark Lord of VI</td>
 </tr>
 </table>
@@ -38,7 +38,7 @@ td { white-space:nowrap; }
 </tr>
 <tr bgcolor="#1f1f1f">
 <td align="center" >Mon, 23 Oct 2017 08:24:58 EDT</td>
-<td align="center" >Sat, 28 Oct 2017 06:54:56 EDT</td>
+<td align="center" >Sat, 28 Oct 2017 20:14:48 EDT</td>
 <td align="center" >0</td>
 <td align="center" >1</td>
 </tr>
@@ -144,123 +144,137 @@ td { white-space:nowrap; }
 <td align="right" ><a href="telnet://144.139.132.92:1701/">1701</a></td>
 </tr>
 <tr bgcolor="#000000">
+<td align="left"><a target="I3 mudlist" href="http://5.189.153.102/">Bytemud</a></td>
+<td align="left" >CoffeeMud</td>
+<td align="left" >CoffeeMud v5.9.5</td>
+<td align="left" ><a href="telnet://5.189.153.102:5555/">5.189.153.102</a></td>
+<td align="right" ><a href="telnet://5.189.153.102:5555/">5555</a></td>
+</tr>
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://54.202.211.122/">CapstoneMUD</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5</td>
 <td align="left" ><a href="telnet://54.202.211.122:5555/">54.202.211.122</a></td>
 <td align="right" ><a href="telnet://54.202.211.122:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://104.14.28.106/">CoffeeMud</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5.1</td>
 <td align="left" ><a href="telnet://104.14.28.106:443/">104.14.28.106</a></td>
 <td align="right" ><a href="telnet://104.14.28.106:443/">443</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://173.255.228.145/">Conquest of Time</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5</td>
 <td align="left" ><a href="telnet://173.255.228.145:5555/">173.255.228.145</a></td>
 <td align="right" ><a href="telnet://173.255.228.145:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://173.193.107.10/">Core MUD</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Colony 1.3</td>
 <td align="left" ><a href="telnet://173.193.107.10:4000/">173.193.107.10</a></td>
 <td align="right" ><a href="telnet://173.193.107.10:4000/">4000</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://138.91.79.81/">Crat's Agony</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.1</td>
 <td align="left" ><a href="telnet://138.91.79.81:6666/">138.91.79.81</a></td>
 <td align="right" ><a href="telnet://138.91.79.81:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://188.166.59.130/">Cybercult Mud</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5</td>
 <td align="left" ><a href="telnet://188.166.59.130:5555/">188.166.59.130</a></td>
 <td align="right" ><a href="telnet://188.166.59.130:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://138.197.27.13/">Dark Ruins</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://138.197.27.13:3000/">138.197.27.13</a></td>
 <td align="right" ><a href="telnet://138.197.27.13:3000/">3000</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://206.212.236.236/">DarkeMUDDS</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://206.212.236.236:5659/">206.212.236.236</a></td>
 <td align="right" ><a href="telnet://206.212.236.236:5659/">5659</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://204.10.33.131/">Darkness and Despair</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Nightmare+DnD</td>
 <td align="left" ><a href="telnet://204.10.33.131:4201/">204.10.33.131</a></td>
 <td align="right" ><a href="telnet://204.10.33.131:4201/">4201</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://108.92.171.117/">Days of Dragons</a></td>
 <td align="left" >Smaug</td>
 <td align="left" >6Dragons 4.2</td>
 <td align="left" ><a href="telnet://108.92.171.117:4040/">108.92.171.117</a></td>
 <td align="right" ><a href="telnet://108.92.171.117:4040/">4040</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://97.107.133.86/">Dead Souls Dev</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://97.107.133.86:8000/">97.107.133.86</a></td>
 <td align="right" ><a href="telnet://97.107.133.86:8000/">8000</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://178.2.182.125/">Dead_Souls_djtechno</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.2</td>
 <td align="left" ><a href="telnet://178.2.182.125:6666/">178.2.182.125</a></td>
 <td align="right" ><a href="telnet://178.2.182.125:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://204.10.33.131/">Desolation</a></td>
 <td align="left" >LP</td>
 <td align="left" >Lima 1.0a8</td>
 <td align="left" ><a href="telnet://204.10.33.131:7878/">204.10.33.131</a></td>
 <td align="right" ><a href="telnet://204.10.33.131:7878/">7878</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://82.68.167.69/">Discworld</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Discworld 18.0a</td>
 <td align="left" ><a href="telnet://82.68.167.69:23/">82.68.167.69</a></td>
 <td align="right" ><a href="telnet://82.68.167.69:23/">23</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://204.62.14.35/">Dllama</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.2</td>
 <td align="left" ><a href="telnet://204.62.14.35:6566/">204.62.14.35</a></td>
 <td align="right" ><a href="telnet://204.62.14.35:6566/">6566</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://74.109.126.27/">Dragon's Den</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dragon Mudlib 1.1</td>
 <td align="left" ><a href="telnet://74.109.126.27:2222/">74.109.126.27</a></td>
 <td align="right" ><a href="telnet://74.109.126.27:2222/">2222</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://108.92.171.117/">Economic Collapse</a></td>
 <td align="left" >Smaug</td>
 <td align="left" >ResortMUD 6.0</td>
 <td align="left" ><a href="telnet://108.92.171.117:4100/">108.92.171.117</a></td>
 <td align="right" ><a href="telnet://108.92.171.117:4100/">4100</a></td>
+</tr>
+<tr bgcolor="#000000">
+<td align="left"><a target="I3 mudlist" href="http://73.244.33.207/">ee</a></td>
+<td align="left" >CoffeeMud</td>
+<td align="left" >CoffeeMud v5.9.5</td>
+<td align="left" ><a href="telnet://73.244.33.207:5555/">73.244.33.207</a></td>
+<td align="right" ><a href="telnet://73.244.33.207:5555/">5555</a></td>
 </tr>
 <tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://73.244.33.207/">EmpiresEnd</a></td>
@@ -389,116 +403,130 @@ td { white-space:nowrap; }
 <td align="right" ><a href="telnet://73.96.137.175:6670/">6670</a></td>
 </tr>
 <tr bgcolor="#1f1f1f">
+<td align="left"><a target="I3 mudlist" href="http://76.179.112.143/">Legends of Verden</a></td>
+<td align="left" >LPMud</td>
+<td align="left" >Dead Souls 3.8.2</td>
+<td align="left" ><a href="telnet://76.179.112.143:9999/">76.179.112.143</a></td>
+<td align="right" ><a href="telnet://76.179.112.143:9999/">9999</a></td>
+</tr>
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://87.212.141.117/">lpcdb-dev</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >lpcdb v1.0 alpha 2</td>
 <td align="left" ><a href="telnet://87.212.141.117:5000/">87.212.141.117</a></td>
 <td align="right" ><a href="telnet://87.212.141.117:5000/">5000</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://76.127.13.26/">Mirage</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://76.127.13.26:5000/">76.127.13.26</a></td>
 <td align="right" ><a href="telnet://76.127.13.26:5000/">5000</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://138.91.79.81/">Monster 2.0 Dev</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >MonsterLib 1.0</td>
 <td align="left" ><a href="telnet://138.91.79.81:60047/">138.91.79.81</a></td>
 <td align="right" ><a href="telnet://138.91.79.81:60047/">60047</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://86.61.249.216/">Morkin23</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://86.61.249.216:6666/">86.61.249.216</a></td>
 <td align="right" ><a href="telnet://86.61.249.216:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://65.103.157.31/">mud.seatonserver.com</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.2</td>
 <td align="left" ><a href="telnet://65.103.157.31:6666/">65.103.157.31</a></td>
 <td align="right" ><a href="telnet://65.103.157.31:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://108.92.171.117/">muddy</a></td>
 <td align="left" >n/a</td>
 <td align="left" >IMC2 Freedom CL-2.1 Ack!</td>
 <td align="left" ><a href="telnet://108.92.171.117:6001/">108.92.171.117</a></td>
 <td align="right" ><a href="telnet://108.92.171.117:6001/">6001</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://85.214.91.234/">MultiMUD</a></td>
 <td align="left" >Circle</td>
 <td align="left" >Multi '95-'08</td>
 <td align="left" ><a href="telnet://85.214.91.234:4242/">85.214.91.234</a></td>
 <td align="right" ><a href="telnet://85.214.91.234:4242/">4242</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://76.117.16.125/">Nanvaent</a></td>
 <td align="left" >LP</td>
 <td align="left" >Nanvaent V.4ish</td>
 <td align="left" ><a href="telnet://76.117.16.125:3000/">76.117.16.125</a></td>
 <td align="right" ><a href="telnet://76.117.16.125:3000/">3000</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://87.106.132.154/">Nightfall</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >NF</td>
 <td align="left" ><a href="telnet://87.106.132.154:4242/">87.106.132.154</a></td>
 <td align="right" ><a href="telnet://87.106.132.154:4242/">4242</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://108.175.8.156/">OdmentMoo</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5</td>
 <td align="left" ><a href="telnet://108.175.8.156:5555/">108.175.8.156</a></td>
 <td align="right" ><a href="telnet://108.175.8.156:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://162.243.111.198/">Pangea Draconis</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.6</td>
 <td align="left" ><a href="telnet://162.243.111.198:6666/">162.243.111.198</a></td>
 <td align="right" ><a href="telnet://162.243.111.198:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://50.112.34.165/">Pilgrim Mud</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.4</td>
 <td align="left" ><a href="telnet://50.112.34.165:5555/">50.112.34.165</a></td>
 <td align="right" ><a href="telnet://50.112.34.165:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://103.8.236.172/">PozMUD</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.8.2</td>
 <td align="left" ><a href="telnet://103.8.236.172:6666/">103.8.236.172</a></td>
 <td align="right" ><a href="telnet://103.8.236.172:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://173.24.228.153/">Rebirth</a></td>
 <td align="left" >LPMud</td>
 <td align="left" >Dead Souls 3.7a7</td>
 <td align="left" ><a href="telnet://173.24.228.153:6666/">173.24.228.153</a></td>
 <td align="right" ><a href="telnet://173.24.228.153:6666/">6666</a></td>
 </tr>
-<tr bgcolor="#1f1f1f">
+<tr bgcolor="#000000">
 <td align="left"><a target="I3 mudlist" href="http://149.56.99.195/">Return to Forever</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.3</td>
 <td align="left" ><a href="telnet://149.56.99.195:5555/">149.56.99.195</a></td>
 <td align="right" ><a href="telnet://149.56.99.195:5555/">5555</a></td>
 </tr>
-<tr bgcolor="#000000">
+<tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://200.144.254.91/">Rewind</a></td>
 <td align="left" >CoffeeMud</td>
 <td align="left" >CoffeeMud v5.9.5</td>
 <td align="left" ><a href="telnet://200.144.254.91:5555/">200.144.254.91</a></td>
 <td align="right" ><a href="telnet://200.144.254.91:5555/">5555</a></td>
+</tr>
+<tr bgcolor="#000000">
+<td align="left"><a target="I3 mudlist" href="http://114.72.2.150/">Rhales teaching mud</a></td>
+<td align="left" >LPMud</td>
+<td align="left" >Discworld 17.0a</td>
+<td align="left" ><a href="telnet://114.72.2.150:6677/">114.72.2.150</a></td>
+<td align="right" ><a href="telnet://114.72.2.150:6677/">6677</a></td>
 </tr>
 <tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://198.245.49.133/">Sarlana Origins</a></td>
@@ -601,7 +629,7 @@ td { white-space:nowrap; }
 <tr bgcolor="#1f1f1f">
 <td align="left"><a target="I3 mudlist" href="http://104.48.188.233/">TimesLost</a></td>
 <td align="left" >n/a</td>
-<td align="left" >IMC2 Freedom CL-2.1 Smaug</td>
+<td align="left" >SmaugFUSS v1.8</td>
 <td align="left" ><a href="telnet://104.48.188.233:4000/">104.48.188.233</a></td>
 <td align="right" ><a href="telnet://104.48.188.233:4000/">4000</a></td>
 </tr>
@@ -662,10 +690,10 @@ td { white-space:nowrap; }
 <td align="right" ><a href="telnet://174.109.166.55:4000/">4000</a></td>
 </tr>
 <tr bgcolor="#00002f">
-<td align="center" colspan="5">87 total muds listed.</td>
+<td align="center" colspan="5">91 total muds listed.</td>
 </tr>
 </table>
 </div>
-<div align="right"><font size="-1" color="#1f1f1f">page took 0.000411 seconds to render.</font></div>
+<div align="right"><font size="-1" color="#1f1f1f">page took 0.000387 seconds to render.</font></div>
 </body>
 </html>
