--- a/public_html/404.html
+++ b/public_html/404.html
@@ -1,8 +1,25 @@
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163395867-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-163395867-1');
+        </script>
+        <script>
+            function redirectTo() {
+                window.location.replace("http://wileymud.themud.org/~wiley/i3log.php");
+            }
+        </script>
         <title>Something Wonderful has Happened!</title>
     </head>
     <body bgcolor="black" text="red">
-        <center><img src="gfx/404.gif"></img></center>
+        <center><img src="gfx/404.gif" onClick='redirectTo();'></img></center>
     </body>
 </html>
