--- a/public_html/youtube.html
+++ b/public_html/youtube.html
@@ -14,6 +14,7 @@
             var playlist_list = [               // This is a list of playlists, as you like
                 //'TfXSBBIzRyg',                                  // girls und panzer
                 //'H-2yGnwgiBY',                                  // haifuri
+                'RDMM0rg4VqKDgSA',                              // Atelier Ryza
                 'RD_abj2xbf2mA',                                // I J I
                 'RD_K3s_oN0wwA',                                // TrySail haifuri
                 'RDhroQj71AO7s',                                // syncopation
