--- a/public_html/404.html
+++ b/public_html/404.html
@@ -13,13 +13,13 @@
           gtag('config', 'UA-163395867-1');
         </script>
         <script>
-            function redirectTo() {
-                window.location.replace("http://wileymud.themud.org/~wiley/i3log.php");
+            document.onmousedown = function(e) {
+                window.location.replace("http://wileymud.themud.org/~wiley/random_video.php");
             }
         </script>
         <title>Something Wonderful has Happened!</title>
     </head>
     <body bgcolor="black" text="red">
-        <center><img src="gfx/404.gif" onClick='redirectTo();'></img></center>
+        <center><img src="gfx/404.gif"></img></center>
     </body>
 </html>
