--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,6 @@
 
           gtag('config', 'UA-163395867-1');
         </script>
-        <META HTTP-EQUIV="Refresh" Content="0; URL=http://wileymud.themud.org/~wiley/i3log.php">
+        <META HTTP-EQUIV="Refresh" Content="0; URL=http://wileymud.themud.org/~wiley/log/">
     </HEAD>
 </HTML>
