Simplified redirect landing

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,17 +1,2 @@
-<HTML>
-    <HEAD>
-        <meta charset="utf-8" />
-        <meta http-equiv="cache-control" content="no-cache" />
-        <meta http-equiv="pragma" content="no-cache" />
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163395867-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'UA-163395867-1');
-        </script>
-        <META HTTP-EQUIV="Refresh" Content="0; URL=http://wileymud.themud.org/~wiley/log/">
-    </HEAD>
-</HTML>
+<META charset="utf-8" />
+<META HTTP-EQUIV="Refresh" Content="0; URL=http://wileymud.themud.org/~wiley/log/">
